example/lib/src/l10n/errors/app_en.arb
{
  "@@locale": "en",
  "error": "An error occurred",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "An unexpected error occurred",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Bug report sent successfully.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}